--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "packaged/helpers": "^1.0||^2.0",
-    "packaged/http": "~1.1",
+    "packaged/http": "~1.1|^2.0.0",
     "packaged/config": "~1.4",
     "tedivm/jshrink": "~1.3"
   },
